--- a/stock-manager.yaml
+++ b/stock-manager.yaml
@@ -2,43 +2,44 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: shopfront
+  name: stockmanager
   labels:
-    app: shopfront
+    app: stockmanager
 spec:
   type: NodePort
   selector:
-    app: shopfront
+    app: stockmanager
   ports:
   - protocol: TCP
-    port: 8010
+    port: 8030
     name: http
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: shopfront
+  name: stockmanager
 spec:
+  spec:
   selector:
     matchLabels:
-      app: shopfront
+      app: stockmanager
   replicas: 3
   template:
     metadata:
       labels:
-        app: shopfront
+        app: stockmanager
     spec:
       imagePullSecrets:
-       - name: regcred
+        - name: regcred
       containers:
-      - name: shopfront
-        image: 10.0.1.7:8082/shopfront:30
+      - name: stockmanager
+        image: 10.0.1.7:8082/stockmanager:30
         ports:
-        - containerPort: 8010
+        - containerPort: 8030
         livenessProbe:
           httpGet:
             path: /health
-            port: 8010
+            port: 8030
           initialDelaySeconds: 30
           timeoutSeconds: 1
