--- a/product-catalogue.yaml
+++ b/product-catalogue.yaml
@@ -2,13 +2,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: productcatalogue
+  name: product-catalogue
   labels:
-    app: productcatalogue
+    app: product-catalogue
 spec:
   type: NodePort
   selector:
-    app: productcatalogue
+    app: product-catalogue
   ports:
   - protocol: TCP
     port: 8020
@@ -18,22 +18,22 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: productcatalogue
+  name: product-catalogue
 spec:
   selector:
     matchLabels:
-      app: productcatalogue
+      app: product-catalogue
   replicas: 3
   template:
     metadata:
       labels:
-        app: productcatalogue
+        app: product-catalogue
     spec:
       imagePullSecrets:
        - name: regcred
       containers:
-      - name: productcatalogue
-        image: 10.0.1.7:8082/product-catalogue:latest
+      - name: product-catalogue
+        image: 10.0.1.9:8082/product-catalogue:latest
         ports:
         - containerPort: 8020
         livenessProbe:
