--- a/stock-manager.yaml
+++ b/stock-manager.yaml
@@ -2,13 +2,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: stockmanager
+  name: stock-manager
   labels:
-    app: stockmanager
+    app: stock-manager
 spec:
   type: NodePort
   selector:
-    app: stockmanager
+    app: stock-manager
   ports:
   - protocol: TCP
     port: 8030
@@ -18,23 +18,23 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: stockmanager
+  name: stock-manager
 spec:
   spec:
   selector:
     matchLabels:
-      app: stockmanager
+      app: stock-manager
   replicas: 3
   template:
     metadata:
       labels:
-        app: stockmanager
+        app: stock-manager
     spec:
       imagePullSecrets:
         - name: regcred
       containers:
-      - name: stockmanager
-        image: 10.0.1.7:8082/stock-manager:latest
+      - name: stock-manager
+        image: 10.0.1.9:8082/stock-manager:latest
         ports:
         - containerPort: 8030
         livenessProbe:
