--- a/product-catalogue.yaml
+++ b/product-catalogue.yaml
@@ -30,10 +30,10 @@ spec:
         app: product-catalogue
     spec:
       imagePullSecrets:
-       - name: regcred
+       - name: project-a
       containers:
       - name: product-catalogue
-        image: 10.0.1.9:8082/product-catalogue:4
+        image: 10.0.1.9:8082/product-catalogue:5
         ports:
         - containerPort: 8020
         livenessProbe:
