--- a/shopfront.yaml
+++ b/shopfront.yaml
@@ -30,10 +30,10 @@ spec:
         app: shopfront
     spec:
       imagePullSecrets:
-       - name: regcred
+       - name: project-a
       containers:
       - name: shopfront
-        image: 10.0.1.9:8082/shopfront:4
+        image: 10.0.1.9:8082/shopfront:5
         ports:
         - containerPort: 8010
         livenessProbe:
