--- a/stock-manager.yaml
+++ b/stock-manager.yaml
@@ -31,10 +31,10 @@ spec:
         app: stock-manager
     spec:
       imagePullSecrets:
-        - name: regcred
+        - name: project-a
       containers:
       - name: stock-manager
-        image: 10.0.1.9:8082/stock-manager:4
+        image: 10.0.1.9:8082/stock-manager:5
         ports:
         - containerPort: 8030
         livenessProbe:
